kubernetes/development/opencode/opencode.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: opencode
  namespace: development
  labels:
    app: opencode
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opencode
  template:
    metadata:
      labels:
        task: development
        app: opencode
    spec:
      priorityClassName: development-priority
      containers:
      - name: opencode
        ports:
        - containerPort: 4096
        securityContext:
          runAsUser: 0
          runAsGroup: 0
        image: registry.registry.svc.cluster.local:5000/opencode:v1
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "4Gi"
            cpu: "2000m"
        command: ["/bin/bash", "-c"]
        args:
        - /init.sh
        volumeMounts:
        - name: openvscode-server-home-volume
          mountPath: /home
        - name: opencode-init
          mountPath: /init.sh
          subPath: init.sh
      volumes:
      - name: openvscode-server-home-volume
        persistentVolumeClaim:
          claimName: openvscode-server-home-claim
      - name: opencode-init
        configMap:
          name: opencode-init
          items:
          - key: init.sh
            path: init.sh
          defaultMode: 0755
---
apiVersion: v1
kind: Service
metadata:
  name: opencode
  namespace: development
spec:
  ports:
  - port: 80
    targetPort: 4096
  selector:
    app: opencode
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opencode-https
  namespace: development
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "development-authentik-opencode@kubernetescrd"
spec:
  tls:
  - secretName: opencode-bas-tls
  rules:
  - host: opencode.bas
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: opencode
            port:
              number: 80
